# yt-transcript

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_api.py  test_cli.py  test_config.py  test_exceptions.py  test_formatter.py  test_innertube.py  test_parser.py  test_transcript.py
yt_transcript/: __init__.py  __main__.py  api.py  cli.py  config.py  exceptions.py  formatter.py  innertube.py  parser.py  transcript.py
