[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript"
version = "0.1.0"
description = "Headless CLI tool to fetch YouTube transcripts using your own API key."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "yt-transcript contributors" },
]
keywords = ["youtube", "transcript", "captions", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
yt-transcript = "yt_transcript.cli:main"

[project.urls]
Homepage = "https://github.com/lorenzotomasdiez/yt-transcript"
Issues = "https://github.com/lorenzotomasdiez/yt-transcript/issues"
Repository = "https://github.com/lorenzotomasdiez/yt-transcript.git"
Changelog = "https://github.com/lorenzotomasdiez/yt-transcript/blob/master/CHANGELOG.md"
